--- a/layouts/partials/aboutSection.html
+++ b/layouts/partials/aboutSection.html
@@ -45,8 +45,10 @@
                         <div>
                             <a class="btn btn-primary mr-3 btn-zoom"
                                 href="{{ .button1Target | absURL }}">{{ .button1Name }}</a>
+                            {{ with .button2Name }}
                             <a class="btn btn-outline-primary btn-zoom" href="{{ .button2Target | absURL }}">
                                 {{ .button2Name }} </a>
+                            {{ end }}
                         </div>
                     </div>
                 </div>
