--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -23,12 +23,11 @@
 						</svg>
 					</div>
 					<div class="text-light footer__cta_content">
-						<span>Contact me</span>
-						<h2 class="mb-0">Let’s Start a Project</h2>
+						<span>Contactez-moi</span>
+						<h2 class="mb-0">Travaillons ensemble !</h2>
 					</div>
 					<div class="footer__cta_action">
-						<a class="btn btn-light btn-zoom" href="{{ .Site.Params.contactLink | absURL }}">Get in
-							touch</a>
+						<a class="btn btn-light btn-zoom" href="{{ .Site.Params.contactLink | absURL }}">Contact</a>
 					</div>
 				</div>
 			</div>
