--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -40,6 +40,9 @@
 			</div>
 			<div class="col-lg-4">
 				<div class="text-light footer__widget_sitemap mb-5">
+				<h4 class="base-font">&nbsp;</h4>
+				<span class="text-light">Entrepreneur bénéficiaire d'un CAPE BGeLab'O</span>
+				<!--
 					<h4 class="base-font">Sitemap</h4>
 					<ul class="unstyle-list small">
 						{{ $sitemap := .Site.Menus.sitemap }}
@@ -47,6 +50,7 @@
 						<li class="mb-2"><a class="text-light" href="{{ .URL | absURL }}">{{ .Name }}</a></li>
 						{{ end }}
 					</ul>
+					-->
 				</div>
 			</div>
 			<div class="col-lg-4">
