--- a/layouts/partials/portfolioSection.html
+++ b/layouts/partials/portfolioSection.html
@@ -18,10 +18,10 @@
             <img src="{{ .Params.thumbnail }}" class="portfolio-item-thumb" alt="portfolio-thumb" />
             <div class="portfolio-item-content">
               <span>{{ .Params.service }}</span>
-              <h3 class="mb-0">
-                <a class="text-dark" href="{{ .Permalink }}">{{ .Title }}</a>
+              <h3 class="mb-0">{{ .Title }}
+                <!--<a class="text-dark" href="{{ .Permalink }}">{{ .Title }}</a>-->
               </h3>
-              <a class="see-more-btn" href="{{ .Permalink }}">See details</a>
+              <!--<a class="see-more-btn" href="{{ .Permalink }}">See details</a>-->
             </div>
           </div>
           {{ end }}
